refactor: improve service and caching handling consistency across components